...
    const val ERROR_TEXT = "view_user_profile_error"
    const val LOADING = "view_user_profile_loading"
    const val PROFILE_PICTURE = "view_user_profile_picture"
  }

  object ProfileScreenTags {
    const val RESTART_DIALOG = "profileRestartDialog"
    const val RESTART_DIALOG_CANCEL_BUTTON = "profileRestartDialogCancel"
    const val RESTART_DIALOG_RESTART_BUTTON = "profileRestartDialogRestart"
  }

  object BrowseCityTags {
    const val ROOT = "browseCityRoot"
    const val BACK_BUTTON = "browseCityBackButton"
    const val LOCATION_BUTTON = "browseCityLocationButton"
...
    const val DESCRIPTION_FIELD = "descField"

    const val GRADE_FIELD = "gradeField"

    const val DELETE_BUTTON = "deleteButton"

    const val SAVE_BUTTON = "saveButton"

    const val REVIEW_TITLE = "reviewTitleField"
    const val PHOTOS = "editReviewPhotos"
  }

  object CustomDatePickerDialogTags {
...
  object ProfileTags {
    fun profilePictureTag(uri: Uri?) = "profileScreenProfilePictureTag$uri"

    const val ACCOUNT_CARD = "profilAccountCard"
    const val PREFERENCES_BUTTON = "profilPreferencesButton"
    const val SAVE_BUTTON = "profile_save_button"
    const val DELETE_PP_BUTTON = "profilePictureDeleteButton"
    const val EMAIL_FIELD = "profileEmailField"
    const val CONTRIBUTIONS_BUTTON = "profileContributionsButton"
    const val BOOKMARKS_BUTTON = "profileBookmarksButton"
    const val SETTINGS_ICON = "profileSettingsIcon"
  }

  object FilterTestTags {
    const val MIN_PRICE = "price_min_text"
    const val MAX_PRICE = "price_max_text"
    const val SLIDER_PRICE = "price_slider"
    const val MAX_SIZE = "size_max_text"
    const val MIN_SIZE = "size_min_text"
    const val SLIDER_SIZE = "size_slider"
    const val BUDGET = "budget"
    const val PREFERRED_SIZE = "preferred_size"
    const val PREFERRED_ROOM_TYPE = "preferred_room_type"
    const val SIGN_UP_WITH_PREFERENCES = "sign_up_with_preferences"
    const val LOCATION_PREFERENCE = "locationField"
  }
...
